<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">BookStore</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_inventory">Delete Inventory</string>

    <string name="delete_all_dialog_msg">You are about to delete all products in this list. Do you want to do this?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="catalog_activity_delete_inventory_successful">The inventory has been deleted.</string>

    <string name="catalog_activity_delete_inventory_failed">Error: unable to delete inventory</string>

    <string name="detail_activity_title_new_book">Add a Book</string>

    <string name="detail_activity_title_edit_book">Edit Book</string>

    <string name="detail_activity_insert_book_failed">Error: unable to save book</string>

    <string name="detail_activity_insert_book_successful">Success! The product has been saved.</string>

    <string name="detail_activity_update_book_failed">Error: unable to save changes</string>

    <string name="detail_activity_update_book_successful">Success! Your changes have been saved.</string>

    <string name="detail_activity_delete_book_failed">Error: unable to delete product</string>

    <string name="detail_activity_delete_book_successful">Success! The product has been deleted.</string>

    <string name="delete_dialog_msg">Do you want to delete this product?</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="category_book_overview">Book Overview</string>

    <string name="category_book_details">Book Details</string>

    <string name="category_supplier_details">Supplier Details</string>

    <string name="hint_book_name">Book Name</string>

    <string name="hint_author">Author</string>

    <string name="unit_price">$</string>

    <string name="hint_price">Price</string>

    <string name="hint_quantity">Quantity</string>

    <string name="hint_supplier_name">Supplier Name</string>

    <string name="hint_supplier_phone">Supplier Phone</string>

    <string name="get_count_string_1">The book table contains</string>

    <string name="get_count_string_2">books.</string>

    <string name="empty_view_title_text">What\'s a bookstore without books?</string>

    <string name="empty_view_subtitle_text">Click on the button below to add a book.</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="sale_button">SALE</string>
    <string name="sale_button_below_zero">Sorry--there aren\'t any more to sell!</string>
    <string name="order">ORDER</string>

</resources>
